Adds threejs.  Adds main ThreeDFourApp.js file, adds first two sjs view files.

--- a/client/bower.json
+++ b/client/bower.json
@@ -1,11 +1,12 @@
 {
-    "name": "three-d-four",
-    "version": "1.0.0",
-    "private": true,
-    "dependencies": {
-        "requirejs": "2.1.16",
-        "jquery": "components/jquery#1.11.0",
-        "jquery-ujs": "~1.0.3"
-    },
-    "devDependencies": {}
+  "name": "three-d-four",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "requirejs": "2.1.16",
+    "jquery": "components/jquery#1.11.0",
+    "jquery-ujs": "~1.0.3",
+    "structurejs": "~0.7.1"
+  },
+  "devDependencies": {}
 }
